# kafka-playground

./: .tool-versions  Makefile  admin.py  data.py  models.py  producer.py  pyproject.toml
local_kafka/: docker-compose.yml
topic/: create_topic.py
